--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
     <body>
         <header>
             <div class="about">
-               <img src="LOGO img.jpeg" alt="logo-of-company" width="150" height="200">
+               <img src="images/LOGO img.jpeg" alt="logo-of-company" width="150" height="200">
                <p>A ZapCart platform is an online tool designed to facilitate
                  the buying and selling of products and services. It typically offers features
                   like browsing product catalogs, adding items to a cart, and completing 
