--- a/home.html
+++ b/home.html
@@ -24,19 +24,19 @@
                 </div>
                 <div class="all">
                     <div class="shirts">
-                       <img src="Pasted image (2).png" alt="shirts-pic" width="150" height="200">
+                       <img src="images/Pasted image (2).png" alt="shirts-pic" width="150" height="200">
                        <a href="shopnow.html"><button>SHOP NOW</button></a>
                     </div>
                     <div class="phone">
-                       <img src="Pasted image (3).png" alt="phones-pic" width="150" height="200">
+                       <img src="images/Pasted image (3).png" alt="phones-pic" width="150" height="200">
                        <a href="shopnow.html"><button>SHOP NOW</button></a>
                     </div>
                     <div class="laptop">
-                       <img src="Pasted image (4).png" alt="laptop-pic" width="150" height="200">
+                       <img src="images/Pasted image (4).png" alt="laptop-pic" width="150" height="200">
                        <a href="shopnow.html"><button>SHOP NOW</button></a>
                     </div>
                     <div class="paint">
-                       <img src="Pasted image (5).png" alt="paints-pic" width="150" height="200">
+                       <img src="images/Pasted image (5).png" alt="paints-pic" width="150" height="200">
                        <a href="shopnow.html"><button>SHOP NOW</button></a>
                     </div>
                 </div>
