--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <header>
             <section id="option">
                 <div class="logo">
-                    <img src="LOGO img.jpeg" alt="Company logo" width="300" height="250">
+                    <img src="images/LOGO img.jpeg" alt="Company logo" width="300" height="250">
                 </div>
                 <div class="button">
                     <a href="home.html"><button>Elevating your lifestyle Now</button></a>
