--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>Zap Cart</title>
         <meta name="Zap Cart" content="Click. Buy. Smile.">
-        <link rel="stylesheet" href="E-comerce.css">
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
         <header>
