--- a/home.html
+++ b/home.html
@@ -9,7 +9,7 @@
             <section id="wel">
                 <div class="shape">
                     <ul>
-                    <a href="E-comerce.html"><button>HOME</button></a>
+                    <a href="index.html"><button>HOME</button></a>
                     <a href="login.html"><button>LOGIN</button></a>
                     <a href="about.html"><button>ABOUT</button></a>
                     <a href="contact.html"><button>CONTACT</button></a>
